kubernetes/services/ingress-by-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-by-path
spec:
  rules:
    # domain name으로 구분
    - host: "abc.store.com"
      http:
        paths:
          - backend:
              service:
                name: store-service
                port:
                  number: 80
    - host: "abc.order.com"
      http:
        paths:
          - backend:
              service:
                name: order-service
                port:
                  number: 80
